@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsdl.php">BSD-2-Clause</license>
  <notes>
+* [jan] Officially support PHP 7.
 * [jan] Show users&apos; full names in employee lists.
 * [jan] Add indexes to searchable timeslice columns.
 * [mjr] Add ability to delete multiple slices at one time.
@@ -256,8 +257,8 @@
   <required>
    <php>
     <min>5.3.0</min>
-    <max>6.0.0alpha1</max>
-    <exclude>6.0.0alpha1</exclude>
+    <max>8.0.0alpha1</max>
+    <exclude>8.0.0alpha1</exclude>
    </php>
    <pearinstaller>
     <min>1.7.0</min>
@@ -517,6 +518,7 @@
    </stability>
    <license uri="http://www.horde.org/licenses/bsdl.php">BSD-2-Clause</license>
    <notes>
+* [jan] Officially support PHP 7.
 * [jan] Show users&apos; full names in employee lists.
 * [jan] Add indexes to searchable timeslice columns.
 * [mjr] Add ability to delete multiple slices at one time.
